Create a module, myShop and place two controllers into this module, use ng-app=myShop to call this module

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      It will be loaded into the $injector when the application is bootstrapped.
 -->
 <!doctype html>
-<html lang="en" ng-app>
+<!-- <html lang="en" ng-app> -->
+<html lang="en" ng-app="myShop">  <!-- call the module, myShop -->
     <head>
         <meta charset="utf-8">
         <title>Welcome to BooKart</title>
