--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
 		<!-- Angular does not know $routeProvider if the following statement is missed -->
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>
+        <!-- add angular animation -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
         <script src="js/app.js"></script>
     </head>
 	<!--<body ng-init="numOfBooks = 10"> <!-- <ng-init> directive evaluates the given expression
@@ -44,7 +46,7 @@
 
 		<!-- create a dynamic view using ng-view directive => can view book-list.html or kart-list.html -->
 		<!-- tell angular to change book-list.html or kart-list.html by using myApp.config(function($routeProvider) { }); -->
-		<div ng-view></div>
+		<div ng-view class="container"></div>
 
 		<!-- move bookListWrapper with BookListCtrl to another page
 		<div id="bookListWrapper" ng-controller="BookListCtrl">
