--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             <div class="nav-wrapper pull-left">
                 <ul class="nav nav-pills">
 					<!-- add routing for the following statements -->
-                    <li class="active"><a href="#/books">Books</a></li>
-                    <li><a href="#/cart">Cart</a></li>
+                    <li ng-class="{active: nav.isActive('/books')}"><a href="#/books">Books</a></li>
+                    <!-- <li class="active"><a href="#/books">Books</a></li> -->
+                    <li ng-class="{active: nav.isActive('/cart')}"><a href="#/cart">Cart</a></li>
                 </ul>
             </div>
         </div>
